Exercise-8/manifests/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-app
  namespace: egress-lab
  labels:
    app: payment-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-app
  template:
    metadata:
      labels:
        app: payment-app
    spec:
      hostAliases:
      - ip: "198.51.100.1"
        hostnames:
        - "dynamodb.ap-south-1.amazonaws.com"
      containers:
      - name: app
        image: python:3.10-slim
        command:
        - python3
        - -c
        - |
          [...]
